--- a/index1.html
+++ b/index1.html
@@ -10,81 +10,7 @@
 
 <body>
     <section id="app" class="todoapp"></section>
-    <script type="module">
-        import { Vnode, startRouter, createState } from './framework.js';
-        const [getTodos, setTodos] = createState([]);
-        const [getNew, setNew] = createState('');
-
-        function Todos(filterFn) {
-            return Vnode('header', {}, [
-                Vnode('h1', {}, 'todos'),
-                Vnode('div', {}, [
-                    Vnode('input', {
-                        type: 'text',
-                        class: 'new-todo',
-                        value: getNew(),
-                        'on:input': e => setNew(e.target.value),
-                        placeholder: "What needs to be done?",
-                        'on:keydown': e => {
-                            if (e.key === 'Enter') {
-                                const text = getNew().trim();
-                                if (!text) return;
-                                setTodos([...getTodos(), { id: Date.now(), text }]);
-                                setNew('');
-                            }
-                        }
-                    }),
-                ]),
-                
-                Vnode('ul', { class: 'todo-list' }, [
-                    getTodos().filter(filterFn).map(todo =>
-                        Vnode('li', { key: todo.id, class: todo.completed ? 'completed' : '' }, [
-                            Vnode('div', {}, [
-                                Vnode('input', {
-                                    class: 'toggle',
-                                    type: 'checkbox',
-                                    checked: todo.completed,
-                                    'on:change': () => {
-                                        setTodos(getTodos().map(t =>
-                                            t.id === todo.id ? { ...t, completed: !t.completed } : t
-                                        ));
-                                    }
-                                }),
-                                Vnode('label', {}, todo.text),
-                                Vnode('button', { class: 'destroy', 'on:click': () => setTodos(getTodos().filter(t => t.id !== todo.id)) }, '')
-                            ])
-                        ])
-                    )
-                ]),
-                getTodos().length > 0 && Vnode('footer', { class: 'footer' }, [
-                    Vnode('span', { class: 'todo-count' }, `${getTodos().filter(t => !t.completed).length} item left!`),
-                    Vnode('ul', { class: 'filters' }, [
-                        Vnode('li', {}, [
-                            Vnode('a', { href: '#/', class: location.hash === '#/' ? 'selected' : '' }, 'All')
-                        ]),
-                        Vnode('li', {}, [
-                            Vnode('a', { href: '#/active', class: location.hash === '#/active' ? 'selected' : '' }, 'Active')
-                        ]),
-                        Vnode('li', {}, [
-                            Vnode('a', { href: '#/completed', class: location.hash === '#/completed' ? 'selected' : '' }, 'Completed')
-                        ])
-                    ]),
-                    Vnode('button', {
-                        'on:click': () => setTodos(getTodos().filter(todo => !todo.completed)),
-                        class: 'clear-completed',
-                        disabled: !getTodos().some(todo => todo.completed)
-                    }, 'Clear completed')
-                ])
-            ]);
-        }
-        const routes = {
-            '/': () => Todos(() => true),
-            '/active': () => Todos(todo => !todo.completed),
-            '/completed': () => Todos(todo => todo.completed)
-        };
-        const app = document.getElementById('app');
-        startRouter(routes, app);
-    </script>
+    <script type="module" src="todo.js"></script>
 </body>
 
 </html>
